// Licensed to SolID under one or more contributor
// license agreements. See the NOTICE file distributed with
// this work for additional information regarding copyright
// ownership. SolID licenses this file to you under
// the Apache License, Version 2.0 (the "License"); you may
// not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing,
// software distributed under the License is distributed on an
// "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
// KIND, either express or implied.  See the License for the
// specific language governing permissions and limitations
// under the License.

syntax = "proto3";

package oidc.core.v1;

option go_package = "oidc/core/v1;corev1";

import "oidc/core/v1/client.proto";
import "oidc/core/v1/error.proto";

// -----------------------------------------------------------------------------

service TokenRevocatonAPI {
  rpc RevokeToken(TokenRevocationRequest) returns (TokenRevocationResponse) {};
}

// -----------------------------------------------------------------------------

// https://tools.ietf.org/html/rfc7009#section-2.1
message TokenRevocationRequest {
  // REQUIRED. Client that invoke the token revocation.
  Client client = 1;

  // REQUIRED.  The token that the client wants to get revoked.
  string token = 2;

  // OPTIONAL.  A hint about the type of the token
  // submitted for revocation.  Clients MAY pass this parameter in
  // order to help the authorization server to optimize the token
  // lookup.  If the server is unable to locate the token using
  // the given hint, it MUST extend its search across all of its
  // supported token types.  An authorization server MAY ignore
  // this parameter, particularly if it is able to detect the
  // token type automatically.  This specification defines two
  // such values:
  optional string token_type_hint = 3;
}

message TokenRevocationResponse {
  Error error = 1;
}
